--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -2,7 +2,7 @@ mysql:
   host: "127.0.0.1"
   port: "3306"
   user: "root"
-  password: "123456"
+  password: "root&1234"
   db: "deskmate"
   charset: "UTF-8"
 token:
